Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\".uppper()''# 'Art Vandelay'"
+    "\"art vandelay\".uppper()\n",
+    "# 'Art Vandelay'"
    ]
   },
   {
@@ -173,7 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".u # 'CEO'"
    ]
   },
   {
