--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    },
    "outputs": [],
    "source": [
-    "('www.')+'vandelay.com' # 'www.vandelay.com'"
+    "('www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
